<?xml version="1.0" encoding="UTF-8"?>
    <project xmlns="http://maven.apache.org/POM/4.0.0"
             xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
             xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                                 https://maven.apache.org/xsd/maven-4.0.0.xsd">

        <modelVersion>4.0.0</modelVersion>

        <!-- ✅ 正確：parent 是 root pom -->
        <parent>
            <groupId>com.example</groupId>
            <artifactId>tableauDemoV2</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </parent>

        <artifactId>application</artifactId>
        <version>0.0.1-SNAPSHOT</version>

        <name>tableauDemoV2-application</name>
        <description>tableauDemoV2 Application</description>

        <properties>
            <java.version>17</java.version>
            <spring-boot.version>3.5.7</spring-boot.version>
        </properties>

        <dependencies>
            <!-- Internal Modules -->
            <dependency>
                <groupId>com.example</groupId>
                <artifactId>auth</artifactId>
            </dependency>

            <dependency>
                <groupId>com.example</groupId>
                <artifactId>finance-core</artifactId>
            </dependency>

            <dependency>
                <groupId>com.example</groupId>
                <artifactId>health</artifactId>
            </dependency>


            <!-- Spring Boot 基礎 -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-web</artifactId>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-thymeleaf</artifactId>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-data-jpa</artifactId>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-websocket</artifactId>
            </dependency>

            <!-- Swagger / OpenAPI -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            </dependency>

            <!-- Security / Validation -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-security</artifactId>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-validation</artifactId>
            </dependency>

            <!-- Database -->
            <dependency>
                <groupId>com.mysql</groupId>
                <artifactId>mysql-connector-j</artifactId>
                <scope>runtime</scope>
            </dependency>

            <!-- Redis -->
    <!--        <dependency>-->
    <!--            <groupId>org.springframework.boot</groupId>-->
    <!--            <artifactId>spring-boot-starter-data-redis</artifactId>-->
    <!--        </dependency>-->

            <!-- JWT -->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>0.11.5</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>0.11.5</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>0.11.5</version>
                <scope>runtime</scope>
            </dependency>

            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-core</artifactId>
            </dependency>

            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-mysql</artifactId>
            </dependency>

            <!-- Swagger / OpenAPI -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>2.8.6</version>
            </dependency>

            <!-- PDF / OCR（暫時仍放 application） -->
    <!--        <dependency>-->
    <!--            <groupId>org.apache.pdfbox</groupId>-->
    <!--            <artifactId>pdfbox</artifactId>-->
    <!--            <version>2.0.30</version>-->
    <!--        </dependency>-->

    <!--        <dependency>-->
    <!--            <groupId>org.apache.pdfbox</groupId>-->
    <!--            <artifactId>pdfbox-tools</artifactId>-->
    <!--            <version>2.0.30</version>-->
    <!--        </dependency>-->

    <!--        <dependency>-->
    <!--            <groupId>org.apache.pdfbox</groupId>-->
    <!--            <artifactId>jbig2-imageio</artifactId>-->
    <!--            <version>3.0.4</version>-->
    <!--        </dependency>-->

    <!--        <dependency>-->
    <!--            <groupId>technology.tabula</groupId>-->
    <!--            <artifactId>tabula</artifactId>-->
    <!--            <version>1.0.5</version>-->
    <!--        </dependency>-->

            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
            </dependency>

            <dependency>
                <groupId>net.sourceforge.tess4j</groupId>
                <artifactId>tess4j</artifactId>
                <version>5.11.0</version>
            </dependency>

            <!-- Utilities -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.14.0</version>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.32</version>
                <scope>provided</scope>
            </dependency>

            <!-- Test -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <scope>test</scope>
            </dependency>
        </dependencies>

        <build>
            <plugins>
                <!-- Spring Boot 打包 -->
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>

                <!-- 前端資源 -->
                <plugin>
                    <groupId>com.github.eirslett</groupId>
                    <artifactId>frontend-maven-plugin</artifactId>
                    <version>1.15.0</version>
                    <configuration>
                        <nodeVersion>v18.19.0</nodeVersion>
                        <npmVersion>10.2.4</npmVersion>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>install-node-and-npm</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>npm-install</id>
                            <phase>generate-resources</phase>
                            <goals>
                                <goal>npm</goal>
                            </goals>
                            <configuration>
                                <arguments>install --no-audit --no-fund</arguments>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <excludes>
                            <exclude>**/integration/**</exclude>
                        </excludes>
                    </configuration>
                </plugin>
            </plugins>
        </build>

    </project>
